Changed to use SMACSS for the styles

--- a/public/index.html
+++ b/public/index.html
@@ -17,28 +17,28 @@
 
   <header>
     <div class="logo"><img src="./img/logo.svg" alt="" /></div>
-    <nav>
-      <a href="#about">About Me</a>
+    <nav class="header-nav">
+      <a class="header-nav--item" href="#about">About Me</a>
     </nav>
 
-    <h1 class="name">
+    <h1 class="title">
       tim
     </h1>
-    <p class="motto">think free, be free</p>
+    <p class="title--text">think free, be free</p>
   </header>
 
 
   <section id="about">
 
-    <h3>about me</h3>
+    <h3 class="about-title">about me</h3>
 
     <div class="face-lockup">
 
-      <div class="face"></div>
+      <div class="face"><img src="./img/mypic.jpg" alt=""></div>
 
     </div>
 
-    <p><strong>Just some Human beeing</strong><br> Who likes the web, music and technology</p>
+    <p class="about-text"><strong>Just some Human beeing</strong><br> Who likes the web, music and technology</p>
 
   </section>
 
@@ -46,12 +46,11 @@
   <footer>
     <div class="logo"></div>
 
-    <nav>
-      <a href="#about">About Me</a>
-      <a href="#"></a>
+    <nav class="footer-nav">
+      <a class="footer-nav--item" href="#about">About Me</a>
     </nav>
 
-    <p>Copyright 2015 <br>
+    <p class="footer-text">Copyright 2015 <br>
     Background by <a href="http://gratisography.com">gratisography</a><br>
     Libraries used: <a href="http://jquery.org">jquery</a>, <a href="https://github.com/kswedberg/jquery-smooth-scroll">jquery-smooth-scrolling</a>,	<a href="http://www.thepetedesign.com/#plugins">jquery-flipping-text</a></p>
   </footer>
