New Work section

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <div class="logo"><img src="./img/logo.svg" alt="" /></div>
     <nav class="header-nav">
       <a class="header-nav--item" href="#about">About Me</a>
+      <a class="header-nav--item" href="#work">My Work</a>
     </nav>
 
     <h1 class="title">
@@ -41,13 +42,25 @@
     <p class="about-text"><strong>Just some Human beeing</strong><br> Who likes the web, music and technology</p>
 
   </section>
+  <section id="background">
+  </section>
+  <section id="work">
+    <h3 class="work-title">my work</h3>
 
+    <ul class="work-list">
+      <li class="work-list--item">
+        <a href="http://quotation.meteor.com">App for Quotes</a>
+        <p>When you want to save your favourite Quotes here is the place for this.</p>
+      </li>
+    </ul>
+  </section>
 
   <footer>
     <div class="logo"></div>
 
     <nav class="footer-nav">
       <a class="footer-nav--item" href="#about">About Me</a>
+      <a class="footer-nav--item" href="#work">My Work</a>
     </nav>
 
     <p class="footer-text">Copyright 2015 <br>
