New Work section

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
 
     <ul class="work-list">
       <li class="work-list--item">
-        <a href="http://quotation.meteor.com">App for Quotes</a>
+        <a href="http://quotation.meteor.com">Quotes</a>
         <p>When you want to save your favourite Quotes here is the place for this.</p>
       </li>
     </ul>
